Fixing North wrapping bug. Simplifying DOM. Unifying sizing of objects

--- a/src/dial/assets/dial-core.css
+++ b/src/dial/assets/dial-core.css
@@ -13,29 +13,26 @@ v\:fill {
 	*display:inline;
 	/*text-align:center;   This causes problems with the angle calc with longer labels*/ 
 }
-.yui3-dial-content{
+.yui3-dial-content,
+.yui3-dial-ring{
 	position:relative;
 }
-.yui3-dial-ring-vml v\:oval {
-	width:100px;
-	height:100px;
+.yui3-dial-handle,
+.yui3-dial-marker,
+.yui3-dial-center-button,
+.yui3-dial-handle-vml,
+.yui3-dial-marker-vml,
+.yui3-dial-center-button-vml,
+.yui3-dial-ring-vml v\:oval,
+.yui3-dial-center-button-vml v\:oval
+{
+	position:absolute;
 }
 .yui3-dial-center-button-vml v\:oval {
-	width:50px;
-	height:50px;
 	font-size:1px;
-}
-.yui3-dial-handle-user{
-	position:absolute; /*Ticket #2529852*/
-}
-.yui3-dial-marker{
-	position:absolute; 
-	width:10%; 
-	height:10%;
+	top:0;
+	left:0;
 }
 .yui3-dial-marker-hidden{
     visibility:hidden;
-}
-.yui3-skin-sam .yui3-dial-ring v\:oval {
-	position:absolute; top:0; left:0;
 }
